subdirectory) for extensive explanations of installing, configuring
and maintaining Samba 3.0 servers and clients.  It is advised to 
begin with the Samba-HOWTO-Collection for overviews and specific 
tasks (the current book is up to approximately 400 pages) and to 
refer to the various man pages for information on individual options.


######################################################################
Changes since 3.0rc1
####################

Please refer to the CVS log for the SAMBA_3_0 branch for complete 
details:

1)  Add levels 261 and 262 to search. Found using Samba4 tester.
2)  Correct bad error return code in session setup reply
3)  Fix bug where smbd returned DOS error codes from SMBsearch
    even when NT1 protocol was negotiated.
4)  Implement SMBexit properly.
5)  Return group lists from a Samba PDC to a Windows 9x/ME box
    in implementing user level access control (bug 314).
6)  Prevent SWAT from crashing when adding shares (bug 254)
7)  Fix various documentation issues (bugs 304 & 214)
8)  Fix wins server listing in SWAT (bug 197)
9)  Fix problem in rpcclient that caused enumerating printer 
    drivers to report failure (bug 294).
10) Use kerberos 5 authentication in our client code whenever possible
11) Fix schannel bug that caused Active Directory DC's to downgrade our
    machine account to an NT member.
12) Implement missing SAMR_REMOVE_USER_FOREIGN_DOMAIN call (bug 252).
13) Implement automatic generation of include/version.h
14) Include initial version of smbldap-tool scripts for the Samba 
    3.0 schema.
15) Implement numerous fixes for multi-byte character strings.
16) Enable 'unix extensions' parameter by default.
17) Make sure we set the SID type when falling back to the rid 
    algorithm (bug 245).
18) Correct linking problems with pam_smbpass (bug 327).
19) Add SYSV defines for Irix and Solaris to ensure the 'printing'
    parameter default to the correct value (bug 230)